ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cribbage-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - cribbage.live
      secretName: cribbage-live-tls
  rules:
  - host: cribbage.live
    http:
      paths:
      - path: /
        backend:
          serviceName: cribbage-service
          servicePort: cribbage-port
